syntax = "proto3";

option csharp_namespace = "AlephbaGrpc.Protos";
package GrpcSreaming;
import "google/protobuf/timestamp.proto";
service ChatStreamService
{
	rpc joinRoom(stream MessageRequest) returns (stream MessageResponse);
}

message MessageRequest
{        
    int32 messagesGroupId=1;
    int32 userId=2;
    string message=3;
    string createdAt=4;
    string updateAt=5;  
    bytes media=6;
    string mediaType=7;
}
message MessageResponse
{
    int32 id=1;    
    int32 messagesGroupId=2;
    int32 userId=3;
    string message=4;
    string createdAt=5;
    string updateAt=6;
    int32 mediaId=7;
    bytes media=8;
    string mediaType=9;
}